uggs stone visibility fixed

--- a/public/assets/stylesheets/main.sass
+++ b/public/assets/stylesheets/main.sass
@@ -89,6 +89,7 @@ a.dark
   top: 0
   bottom: 0
   overflow: hidden
+  z-index: 10
   &.fadeOut
     z-index: -1
   &.dark
@@ -246,8 +247,10 @@ nav
     z-index: 10
     background: $body-color
     color: $body-bg
+  .stone-overlay
+    overflow: visible
   .uggs-stone
-    z-index: 5
+    z-index: 9
 
 // PROGRAM
 
